Minor cleanups in deprecations and other warnings